--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -42,7 +42,14 @@ body {
       display: block;
       margin: auto;
       border-radius: 50%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
       &:hover {
+        border: 2px solid white;
+      }
+      .avatarSelected {
         border: 2px solid white;
       }
     }
