--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -17,7 +17,7 @@ body {
   display: grid;
   width: 90%;
   height: 90%;
-  grid-template-columns: 1fr 3fr 3fr 3fr;
+  grid-template-columns: 120px 1fr 1fr 1fr;
   grid-template-rows: 25% 25% 25% 25%;
   grid-template-areas:
     "s m . . "
@@ -31,17 +31,19 @@ body {
     display: grid;
     grid-template-rows: 3fr repeat(6, 2fr) 2fr;
     height: 100%;
+    // width: 6.5vw;
     background: rgba(128, 128, 128, 0.815);
+    border-right: 2px solid rgb(121, 121, 121);
     // background: #00111f;
-    align-items: center;
-    justify-items: center;
-    grid-gap: 1%;
+    // align-items: center;
+    // justify-items: center;
     .sidebar__item {
-      max-height: 90px;
-      max-width: 90px;
+      max-height: 75px;
+      max-width: 75px;
       display: block;
-      margin: auto;
       border-radius: 50%;
+      align-self: center;
+      justify-self: center;
       img {
         width: 100%;
         height: 100%;
@@ -54,15 +56,18 @@ body {
       }
     }
     #herb {
-      max-width: 200px;
-      max-height: 200px;
+      position: sticky;
+      max-width: 100px;
+      max-height: 100px;
+      align-self: center;
+      justify-self: center;
     }
   }
   .playerInfo {
     grid-area: m;
     display: grid;
     /*Why 70 % works ?!??*/
-    grid-template-rows: 1fr 70% 1fr;
+    grid-template-rows: 150px auto 120px;
     grid-template-areas:
       "info"
       "statue"
@@ -115,10 +120,12 @@ body {
     grid-area: pF;
     display: flex;
     flex-flow: row;
+
     .logo {
+      flex-grow: 1;
       text-align: center;
-      height: 60%;
-      width: 20%;
+      height: 100px;
+      width: 100px;
       img {
         max-width: 100%;
         max-height: 100%;
