--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -18,7 +18,7 @@ body {
   width: 90%;
   height: 90%;
   grid-template-columns: 120px 1fr 1fr 1fr;
-  grid-template-rows: 15% 10% 25% 25% 25%;
+  grid-template-rows: 10% 15% 25% 25% 25%;
   grid-template-areas:
     "s . . . "
     "s m . ."
@@ -117,20 +117,31 @@ body {
       font-weight: bold;
     }
   }
-  .physicalForm {
+  .physicalFormWrapper {
     grid-area: pF;
-    display: flex;
-    flex-flow: row;
-
-    .logo {
-      flex-grow: 1;
-      text-align: center;
-      height: auto;
-      width: auto;
-      align-self: flex-end;
-      img {
-        max-width: 100px;
-        max-height: 100px;
+    .physicalFormHeader {
+      display: flex;
+      h3 {
+        flex: 1;
+      }
+      p {
+        flex: 1;
+        text-align: right;
+      }
+    }
+    .physicalForm {
+      display: flex;
+      flex-flow: row;
+      .logo {
+        flex-grow: 1;
+        text-align: center;
+        height: auto;
+        width: auto;
+        align-self: flex-end;
+        img {
+          max-width: 100px;
+          max-height: 100px;
+        }
       }
     }
   }
@@ -142,10 +153,12 @@ body {
       height: 100%;
     }
   }
-  #court {
+  .court {
     grid-area: court;
-    // width: 100%;
-    // height: 100%;
+    #court {
+      width: 80%;
+      height: 80%;
+    }
   }
 }
 .dashboard > * {
