--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,10 +1,16 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   position: static;
-  width: auto;
+  min-width: 1000px;
   height: 1000px;
   background-image: url("./images/backgroundmat.jpg");
   // background: #841919;
-  background-size: 100% 100%;
+  background-size: auto 100%;
 }
 #root {
   width: 100%;
@@ -58,7 +64,7 @@ body {
   .sidebar {
     grid-area: s;
     display: grid;
-    grid-template-rows: 3fr repeat(6, 2fr) 2fr;
+    grid-template-rows: 1fr 6fr 1fr;
     height: 100%;
     // width: 6.5vw;
     background: #110816;
@@ -68,24 +74,49 @@ body {
     // background: #00111f;
     // align-items: center;
     // justify-items: center;
-    .sidebar__item {
-      max-height: 75px;
-      max-width: 75px;
-      display: block;
-      border-radius: 50%;
-      align-self: center;
-      justify-self: center;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-      &:hover {
-        border: 2px solid white;
-      }
-      .avatarSelected {
-        border: 2px solid white;
+    .avatars {
+      overflow-y: scroll;
+      display: grid;
+      .sidebar__item {
+        position: sticky;
+        margin: 20px 0;
+        max-height: 75px;
+        max-width: 75px;
+        display: block;
+        border-radius: 50%;
+        align-self: center;
+        justify-self: center;
+        transition-property: border;
+        transition-duration: 0.1s;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+        &:hover {
+          border: 2px solid white;
+        }
+        .avatarSelected {
+          border: 2px solid white;
+        }
       }
     }
+    .avatars::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    .avatars::-webkit-scrollbar-track {
+      background-clip: content-box; /* THIS IS IMPORTANT */
+    }
+
+    .avatars::-webkit-scrollbar-thumb {
+      background-color: #2d1b34;
+      border-radius: 10px;
+      border: 3px solid transparent;
+
+      background-clip: content-box;
+    }
+
     #herb {
       position: sticky;
       max-width: 120px;
