--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -79,24 +79,20 @@ body {
       display: grid;
       .sidebar__item {
         position: sticky;
-        margin: 20px 0;
         max-height: 75px;
         max-width: 75px;
         display: block;
         border-radius: 50%;
-        align-self: center;
-        justify-self: center;
+        align-items: center;
+        justify-items: center;
         transition-property: border;
         transition-duration: 0.1s;
-
+        margin: 18px auto;
         img {
           width: 100%;
           height: 100%;
         }
         &:hover {
-          border: 2px solid white;
-        }
-        .avatarSelected {
           border: 2px solid white;
         }
       }
@@ -262,6 +258,51 @@ body {
       width: 100%;
       height: 80%;
     }
+  }
+  .match {
+  }
+  .log {
+    overflow: scroll;
+    height: 500px;
+
+    .logButton {
+      display: flex;
+      height: 50px;
+      margin: 10px 0;
+      .sidebar__item {
+        height: 100%;
+        float: left;
+        img {
+          height: 100%;
+        }
+      }
+      .timeStamp {
+      }
+      .ball {
+        img {
+          height: 25px;
+          width: 25px;
+        }
+      }
+    }
+    .logButton:hover {
+      background: #110816;
+    }
+  }
+  .log::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .log::-webkit-scrollbar-track {
+    background-clip: content-box; /* THIS IS IMPORTANT */
+  }
+
+  .log::-webkit-scrollbar-thumb {
+    background-color: #2d1b34;
+    border-radius: 10px;
+    border: 3px solid transparent;
+
+    background-clip: content-box;
   }
 }
 .dashboard > * {
