--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -6,15 +6,16 @@
 
 body {
   position: static;
-  min-width: 1000px;
+  max-width: 1656px;
   height: 1000px;
-  background-image: url("./images/backgroundmat.jpg");
+  background-image: url("./images/backgroundmat.webp");
   // background: #841919;
   background-size: auto 100%;
 }
 #root {
   width: 100%;
   height: 100%;
+  margin: 0 5%;
   font-family: "Oswald", sans-serif;
   letter-spacing: 1.3px;
 }
@@ -22,7 +23,7 @@ body {
   margin: auto;
   margin-top: 1rem;
   display: grid;
-  width: 90%;
+  min-width: 1656px;
   height: 90%;
   grid-template-columns: 120px 1fr 1fr 1fr;
   grid-template-rows: 8% 15% 37% 20% 20%;
@@ -35,6 +36,8 @@ body {
   box-shadow: 3px 3px 10px;
   border-radius: 10px;
   background: linear-gradient(#201328, #191319);
+  .mainPage {
+  }
   .header {
     grid-area: h;
     display: flex;
@@ -241,6 +244,14 @@ body {
         //   min-width: 50px;
         // }
       }
+      .logoWithVideo {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        #youtubeLogo {
+          height: 30px;
+        }
+      }
     }
 
     .chart {
@@ -260,33 +271,52 @@ body {
     }
   }
   .match {
+    position: relative;
+    display: grid;
+  }
+  #canvasInAPerfectWorld {
+    position: absolute;
+    margin-top: 60px;
+    border: 1px solid black;
+  }
+  #searchLog input {
+    background-color: #0f94c5;
+    color: white;
+    border: none;
+    width: 100%;
+    height: 100%;
   }
   .log {
     overflow: scroll;
-    height: 500px;
-
+    height: 826px;
+    width: 285px;
     .logButton {
       display: flex;
-      height: 50px;
+      flex-direction: row;
+      width: 100%;
       margin: 10px 0;
+      align-items: center;
+      justify-content: space-around;
+      color: white;
+      background-color: transparent;
+      border: none;
       .sidebar__item {
-        height: 100%;
-        float: left;
         img {
-          height: 100%;
+          height: 4rem;
         }
       }
       .timeStamp {
       }
       .ball {
         img {
-          height: 25px;
-          width: 25px;
+          height: 4rem;
         }
       }
     }
+
     .logButton:hover {
       background: #110816;
+      cursor: pointer;
     }
   }
   .log::-webkit-scrollbar {
@@ -303,6 +333,9 @@ body {
     border: 3px solid transparent;
 
     background-clip: content-box;
+  }
+  .matchTimeline {
+    display: flex;
   }
 }
 .dashboard > * {
