--- a/client/src/main.css
+++ b/client/src/main.css
@@ -295,10 +295,25 @@ body {
   border: 1px solid black;
 }
 
+.dashboard #searchLog {
+  margin: 10px;
+  background: #2f3640;
+  height: 40px;
+  border-radius: 40px;
+  padding: 10px;
+}
+
 .dashboard #searchLog input {
-  background-color: #0f94c5;
-  color: white;
   border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: white;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 40px;
+  font-weight: bold;
   width: 100%;
   height: 100%;
 }
