--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -279,13 +279,31 @@ body {
     margin-top: 60px;
     border: 1px solid black;
   }
-  #searchLog input {
-    background-color: #0f94c5;
-    color: white;
-    border: none;
-    width: 100%;
-    height: 100%;
+  #searchLog {
+    margin: 10px;
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 10px;
+    input {
+      border: none;
+      background: none;
+      outline: none;
+      float: left;
+      padding: 0;
+      color: white;
+      font-size: 16px;
+      transition: 0.4s;
+      line-height: 40px;
+
+      font-weight: bold;
+      width: 100%;
+      height: 100%;
+    }
   }
+  // #searchLog::-webkit-input-placeholder {
+  //   color: white;
+  // }
   .log {
     overflow: scroll;
     height: 826px;
